include_directories(../include)


set (TESTSUITE_SOURCES
    src/GenericGridTest.h
    src/NodeCalculatorTest.h
    src/TetrisTestSuite.h
    src/WorkerPoolTest.h
    src/WorkerTest.h
    src/Driver.cpp
    src/GenericGridTest.cpp
    src/NodeCalculatorTest.cpp
    src/TetrisTestSuite.cpp
    src/WorkerPoolTest.cpp
    src/WorkerTest.cpp)


set (POCO_FOUNDATION_HEADERS
    ${POCO}Foundation/include/Poco/AbstractCache.h
    ${POCO}Foundation/include/Poco/AbstractDelegate.h
    ${POCO}Foundation/include/Poco/AbstractEvent.h
    ${POCO}Foundation/include/Poco/AbstractObserver.h
    ${POCO}Foundation/include/Poco/AbstractPriorityDelegate.h
    ${POCO}Foundation/include/Poco/AbstractStrategy.h
    ${POCO}Foundation/include/Poco/AccessExpirationDecorator.h
    ${POCO}Foundation/include/Poco/AccessExpireCache.h
    ${POCO}Foundation/include/Poco/AccessExpireLRUCache.h
    ${POCO}Foundation/include/Poco/AccessExpireStrategy.h
    ${POCO}Foundation/include/Poco/ActiveDispatcher.h
    ${POCO}Foundation/include/Poco/ActiveMethod.h
    ${POCO}Foundation/include/Poco/ActiveResult.h
    ${POCO}Foundation/include/Poco/ActiveRunnable.h
    ${POCO}Foundation/include/Poco/ActiveStarter.h
    ${POCO}Foundation/include/Poco/Activity.h
    ${POCO}Foundation/include/Poco/Any.h
    ${POCO}Foundation/include/Poco/ArchiveStrategy.h
    ${POCO}Foundation/include/Poco/ASCIIEncoding.h
    ${POCO}Foundation/include/Poco/AsyncChannel.h
    ${POCO}Foundation/include/Poco/AtomicCounter.h
    ${POCO}Foundation/include/Poco/AutoPtr.h
    ${POCO}Foundation/include/Poco/AutoReleasePool.h
    ${POCO}Foundation/include/Poco/Base64Decoder.h
    ${POCO}Foundation/include/Poco/Base64Encoder.h
    ${POCO}Foundation/include/Poco/BasicEvent.h
    ${POCO}Foundation/include/Poco/BinaryReader.h
    ${POCO}Foundation/include/Poco/BinaryWriter.h
    ${POCO}Foundation/include/Poco/Buffer.h
    ${POCO}Foundation/include/Poco/BufferAllocator.h
    ${POCO}Foundation/include/Poco/BufferedBidirectionalStreamBuf.h
    ${POCO}Foundation/include/Poco/BufferedStreamBuf.h
    ${POCO}Foundation/include/Poco/Bugcheck.h
    ${POCO}Foundation/include/Poco/ByteOrder.h
    ${POCO}Foundation/include/Poco/Channel.h
    ${POCO}Foundation/include/Poco/Checksum.h
    ${POCO}Foundation/include/Poco/ClassLibrary.h
    ${POCO}Foundation/include/Poco/ClassLoader.h
    ${POCO}Foundation/include/Poco/CompareFunctions.h
    ${POCO}Foundation/include/Poco/Condition.h
    ${POCO}Foundation/include/Poco/Config.h
    ${POCO}Foundation/include/Poco/Configurable.h
    ${POCO}Foundation/include/Poco/ConsoleChannel.h
    ${POCO}Foundation/include/Poco/CountingStream.h
    ${POCO}Foundation/include/Poco/DateTime.h
    ${POCO}Foundation/include/Poco/DateTimeFormat.h
    ${POCO}Foundation/include/Poco/DateTimeFormatter.h
    ${POCO}Foundation/include/Poco/DateTimeParser.h
    ${POCO}Foundation/include/Poco/Debugger.h
    ${POCO}Foundation/include/Poco/DefaultStrategy.h
    ${POCO}Foundation/include/Poco/DeflatingStream.h
    ${POCO}Foundation/include/Poco/Delegate.h
    ${POCO}Foundation/include/Poco/DigestEngine.h
    ${POCO}Foundation/include/Poco/DigestStream.h
    ${POCO}Foundation/include/Poco/DirectoryIterator.h
    ${POCO}Foundation/include/Poco/DirectoryIterator_UNIX.h
    ${POCO}Foundation/include/Poco/DirectoryIterator_VMS.h
    ${POCO}Foundation/include/Poco/DirectoryIterator_WIN32.h
    ${POCO}Foundation/include/Poco/DirectoryIterator_WIN32U.h
    ${POCO}Foundation/include/Poco/DynamicAny.h
    ${POCO}Foundation/include/Poco/DynamicAnyHolder.h
    ${POCO}Foundation/include/Poco/DynamicFactory.h
    ${POCO}Foundation/include/Poco/Environment.h
    ${POCO}Foundation/include/Poco/Environment_UNIX.h
    ${POCO}Foundation/include/Poco/Environment_VMS.h
    ${POCO}Foundation/include/Poco/Environment_WIN32.h
    ${POCO}Foundation/include/Poco/Environment_WIN32U.h
    ${POCO}Foundation/include/Poco/ErrorHandler.h
    ${POCO}Foundation/include/Poco/Event.h
    ${POCO}Foundation/include/Poco/Event_POSIX.h
    ${POCO}Foundation/include/Poco/Event_WIN32.h
    ${POCO}Foundation/include/Poco/EventArgs.h
    ${POCO}Foundation/include/Poco/EventLogChannel.h
    ${POCO}Foundation/include/Poco/Exception.h
    ${POCO}Foundation/include/Poco/ExpirationDecorator.h
    ${POCO}Foundation/include/Poco/Expire.h
    ${POCO}Foundation/include/Poco/ExpireCache.h
    ${POCO}Foundation/include/Poco/ExpireLRUCache.h
    ${POCO}Foundation/include/Poco/ExpireStrategy.h
    ${POCO}Foundation/include/Poco/FIFOEvent.h
    ${POCO}Foundation/include/Poco/FIFOStrategy.h
    ${POCO}Foundation/include/Poco/File.h
    ${POCO}Foundation/include/Poco/File_UNIX.h
    ${POCO}Foundation/include/Poco/File_VMS.h
    ${POCO}Foundation/include/Poco/File_WIN32.h
    ${POCO}Foundation/include/Poco/File_WIN32U.h
    ${POCO}Foundation/include/Poco/FileChannel.h
    ${POCO}Foundation/include/Poco/FileStream.h
    ${POCO}Foundation/include/Poco/FileStream_POSIX.h
    ${POCO}Foundation/include/Poco/FileStream_WIN32.h
    ${POCO}Foundation/include/Poco/FileStreamFactory.h
    ${POCO}Foundation/include/Poco/Format.h
    ${POCO}Foundation/include/Poco/Formatter.h
    ${POCO}Foundation/include/Poco/FormattingChannel.h
    ${POCO}Foundation/include/Poco/Foundation.h
    ${POCO}Foundation/include/Poco/FPEnvironment.h
    ${POCO}Foundation/include/Poco/FPEnvironment_C99.h
    ${POCO}Foundation/include/Poco/FPEnvironment_DEC.h
    ${POCO}Foundation/include/Poco/FPEnvironment_DUMMY.h
    ${POCO}Foundation/include/Poco/FPEnvironment_SUN.h
    ${POCO}Foundation/include/Poco/FPEnvironment_WIN32.h
    ${POCO}Foundation/include/Poco/FunctionDelegate.h
    ${POCO}Foundation/include/Poco/FunctionPriorityDelegate.h
    ${POCO}Foundation/include/Poco/Glob.h
    ${POCO}Foundation/include/Poco/Hash.h
    ${POCO}Foundation/include/Poco/HashFunction.h
    ${POCO}Foundation/include/Poco/HashMap.h
    ${POCO}Foundation/include/Poco/HashSet.h
    ${POCO}Foundation/include/Poco/HashStatistic.h
    ${POCO}Foundation/include/Poco/HashTable.h
    ${POCO}Foundation/include/Poco/HexBinaryDecoder.h
    ${POCO}Foundation/include/Poco/HexBinaryEncoder.h
    ${POCO}Foundation/include/Poco/HMACEngine.h
    ${POCO}Foundation/include/Poco/InflatingStream.h
    ${POCO}Foundation/include/Poco/Instantiator.h
    ${POCO}Foundation/include/Poco/KeyValueArgs.h
    ${POCO}Foundation/include/Poco/Latin1Encoding.h
    ${POCO}Foundation/include/Poco/Latin9Encoding.h
    ${POCO}Foundation/include/Poco/LinearHashTable.h
    ${POCO}Foundation/include/Poco/LineEndingConverter.h
    ${POCO}Foundation/include/Poco/LocalDateTime.h
    ${POCO}Foundation/include/Poco/LogFile.h
    ${POCO}Foundation/include/Poco/LogFile_STD.h
    ${POCO}Foundation/include/Poco/LogFile_VMS.h
    ${POCO}Foundation/include/Poco/LogFile_WIN32.h
    ${POCO}Foundation/include/Poco/LogFile_WIN32U.h
    ${POCO}Foundation/include/Poco/Logger.h
    ${POCO}Foundation/include/Poco/LoggingFactory.h
    ${POCO}Foundation/include/Poco/LoggingRegistry.h
    ${POCO}Foundation/include/Poco/LogStream.h
    ${POCO}Foundation/include/Poco/LRUCache.h
    ${POCO}Foundation/include/Poco/LRUStrategy.h
    ${POCO}Foundation/include/Poco/Manifest.h
    ${POCO}Foundation/include/Poco/MD2Engine.h
    ${POCO}Foundation/include/Poco/MD4Engine.h
    ${POCO}Foundation/include/Poco/MD5Engine.h
    ${POCO}Foundation/include/Poco/MemoryPool.h
    ${POCO}Foundation/include/Poco/MemoryStream.h
    ${POCO}Foundation/include/Poco/Message.h
    ${POCO}Foundation/include/Poco/MetaObject.h
    ${POCO}Foundation/include/Poco/MetaProgramming.h
    ${POCO}Foundation/include/Poco/Mutex.h
    ${POCO}Foundation/include/Poco/Mutex_POSIX.h
    ${POCO}Foundation/include/Poco/Mutex_WIN32.h
    ${POCO}Foundation/include/Poco/NamedEvent.h
    ${POCO}Foundation/include/Poco/NamedEvent_UNIX.h
    ${POCO}Foundation/include/Poco/NamedEvent_VMS.h
    ${POCO}Foundation/include/Poco/NamedEvent_WIN32.h
    ${POCO}Foundation/include/Poco/NamedEvent_WIN32U.h
    ${POCO}Foundation/include/Poco/NamedMutex.h
    ${POCO}Foundation/include/Poco/NamedMutex_UNIX.h
    ${POCO}Foundation/include/Poco/NamedMutex_VMS.h
    ${POCO}Foundation/include/Poco/NamedMutex_WIN32.h
    ${POCO}Foundation/include/Poco/NamedMutex_WIN32U.h
    ${POCO}Foundation/include/Poco/NamedTuple.h
    ${POCO}Foundation/include/Poco/NestedDiagnosticContext.h
    ${POCO}Foundation/include/Poco/NObserver.h
    ${POCO}Foundation/include/Poco/Notification.h
    ${POCO}Foundation/include/Poco/NotificationCenter.h
    ${POCO}Foundation/include/Poco/NotificationQueue.h
    ${POCO}Foundation/include/Poco/NotificationStrategy.h
    ${POCO}Foundation/include/Poco/NullChannel.h
    ${POCO}Foundation/include/Poco/NullStream.h
    ${POCO}Foundation/include/Poco/NumberFormatter.h
    ${POCO}Foundation/include/Poco/NumberParser.h
    ${POCO}Foundation/include/Poco/Observer.h
    ${POCO}Foundation/include/Poco/OpcomChannel.h
    ${POCO}Foundation/include/Poco/Path.h
    ${POCO}Foundation/include/Poco/Path_UNIX.h
    ${POCO}Foundation/include/Poco/Path_VMS.h
    ${POCO}Foundation/include/Poco/Path_WIN32.h
    ${POCO}Foundation/include/Poco/Path_WIN32U.h
    ${POCO}Foundation/include/Poco/PatternFormatter.h
    ${POCO}Foundation/include/Poco/Pipe.h
    ${POCO}Foundation/include/Poco/PipeImpl.h
    ${POCO}Foundation/include/Poco/PipeImpl_DUMMY.h
    ${POCO}Foundation/include/Poco/PipeImpl_POSIX.h
    ${POCO}Foundation/include/Poco/PipeImpl_WIN32.h
    ${POCO}Foundation/include/Poco/PipeStream.h
    ${POCO}Foundation/include/Poco/Platform.h
    ${POCO}Foundation/include/Poco/Platform_POSIX.h
    ${POCO}Foundation/include/Poco/Platform_VMS.h
    ${POCO}Foundation/include/Poco/Platform_WIN32.h
    ${POCO}Foundation/include/Poco/Poco.h
    ${POCO}Foundation/include/Poco/PriorityDelegate.h
    ${POCO}Foundation/include/Poco/PriorityEvent.h
    ${POCO}Foundation/include/Poco/PriorityExpire.h
    ${POCO}Foundation/include/Poco/PriorityNotificationQueue.h
    ${POCO}Foundation/include/Poco/Process.h
    ${POCO}Foundation/include/Poco/Process_UNIX.h
    ${POCO}Foundation/include/Poco/Process_VMS.h
    ${POCO}Foundation/include/Poco/Process_WIN32.h
    ${POCO}Foundation/include/Poco/Process_WIN32U.h
    ${POCO}Foundation/include/Poco/PurgeStrategy.h
    ${POCO}Foundation/include/Poco/Random.h
    ${POCO}Foundation/include/Poco/RandomStream.h
    ${POCO}Foundation/include/Poco/RefCountedObject.h
    ${POCO}Foundation/include/Poco/RegularExpression.h
    ${POCO}Foundation/include/Poco/RotateStrategy.h
    ${POCO}Foundation/include/Poco/Runnable.h
    ${POCO}Foundation/include/Poco/RunnableAdapter.h
    ${POCO}Foundation/include/Poco/RWLock.h
    ${POCO}Foundation/include/Poco/RWLock_POSIX.h
    ${POCO}Foundation/include/Poco/RWLock_WIN32.h
    ${POCO}Foundation/include/Poco/ScopedLock.h
    ${POCO}Foundation/include/Poco/ScopedUnlock.h
    ${POCO}Foundation/include/Poco/Semaphore.h
    ${POCO}Foundation/include/Poco/Semaphore_POSIX.h
    ${POCO}Foundation/include/Poco/Semaphore_WIN32.h
    ${POCO}Foundation/include/Poco/SHA1Engine.h
    ${POCO}Foundation/include/Poco/SharedLibrary.h
    ${POCO}Foundation/include/Poco/SharedLibrary_HPUX.h
    ${POCO}Foundation/include/Poco/SharedLibrary_UNIX.h
    ${POCO}Foundation/include/Poco/SharedLibrary_VMS.h
    ${POCO}Foundation/include/Poco/SharedLibrary_WIN32.h
    ${POCO}Foundation/include/Poco/SharedLibrary_WIN32U.h
    ${POCO}Foundation/include/Poco/SharedMemory.h
    ${POCO}Foundation/include/Poco/SharedMemory_DUMMY.h
    ${POCO}Foundation/include/Poco/SharedMemory_POSIX.h
    ${POCO}Foundation/include/Poco/SharedMemory_WIN32.h
    ${POCO}Foundation/include/Poco/SharedPtr.h
    ${POCO}Foundation/include/Poco/SignalHandler.h
    ${POCO}Foundation/include/Poco/SimpleFileChannel.h
    ${POCO}Foundation/include/Poco/SimpleHashTable.h
    ${POCO}Foundation/include/Poco/SingletonHolder.h
    ${POCO}Foundation/include/Poco/SplitterChannel.h
    ${POCO}Foundation/include/Poco/Stopwatch.h
    ${POCO}Foundation/include/Poco/StrategyCollection.h
    ${POCO}Foundation/include/Poco/StreamChannel.h
    ${POCO}Foundation/include/Poco/StreamConverter.h
    ${POCO}Foundation/include/Poco/StreamCopier.h
    ${POCO}Foundation/include/Poco/StreamTokenizer.h
    ${POCO}Foundation/include/Poco/StreamUtil.h
    ${POCO}Foundation/include/Poco/String.h
    ${POCO}Foundation/include/Poco/StringTokenizer.h
    ${POCO}Foundation/include/Poco/SynchronizedObject.h
    ${POCO}Foundation/include/Poco/SyslogChannel.h
    ${POCO}Foundation/include/Poco/Task.h
    ${POCO}Foundation/include/Poco/TaskManager.h
    ${POCO}Foundation/include/Poco/TaskNotification.h
    ${POCO}Foundation/include/Poco/TeeStream.h
    ${POCO}Foundation/include/Poco/TemporaryFile.h
    ${POCO}Foundation/include/Poco/TextConverter.h
    ${POCO}Foundation/include/Poco/TextEncoding.h
    ${POCO}Foundation/include/Poco/TextIterator.h
    ${POCO}Foundation/include/Poco/Thread.h
    ${POCO}Foundation/include/Poco/Thread_POSIX.h
    ${POCO}Foundation/include/Poco/Thread_WIN32.h
    ${POCO}Foundation/include/Poco/ThreadLocal.h
    ${POCO}Foundation/include/Poco/ThreadPool.h
    ${POCO}Foundation/include/Poco/ThreadTarget.h
    ${POCO}Foundation/include/Poco/TimedNotificationQueue.h
    ${POCO}Foundation/include/Poco/Timer.h
    ${POCO}Foundation/include/Poco/Timespan.h
    ${POCO}Foundation/include/Poco/Timestamp.h
    ${POCO}Foundation/include/Poco/Timezone.h
    ${POCO}Foundation/include/Poco/Token.h
    ${POCO}Foundation/include/Poco/Tuple.h
    ${POCO}Foundation/include/Poco/TypeList.h
    ${POCO}Foundation/include/Poco/Types.h
    ${POCO}Foundation/include/Poco/UnbufferedStreamBuf.h
    ${POCO}Foundation/include/Poco/Unicode.h
    ${POCO}Foundation/include/Poco/UnicodeConverter.h
    ${POCO}Foundation/include/Poco/UniqueAccessExpireCache.h
    ${POCO}Foundation/include/Poco/UniqueAccessExpireLRUCache.h
    ${POCO}Foundation/include/Poco/UniqueAccessExpireStrategy.h
    ${POCO}Foundation/include/Poco/UniqueExpireCache.h
    ${POCO}Foundation/include/Poco/UniqueExpireLRUCache.h
    ${POCO}Foundation/include/Poco/UniqueExpireStrategy.h
    ${POCO}Foundation/include/Poco/UnWindows.h
    ${POCO}Foundation/include/Poco/URI.h
    ${POCO}Foundation/include/Poco/URIStreamFactory.h
    ${POCO}Foundation/include/Poco/URIStreamOpener.h
    ${POCO}Foundation/include/Poco/UTF16Encoding.h
    ${POCO}Foundation/include/Poco/UTF8Encoding.h
    ${POCO}Foundation/include/Poco/UTF8String.h
    ${POCO}Foundation/include/Poco/UUID.h
    ${POCO}Foundation/include/Poco/UUIDGenerator.h
    ${POCO}Foundation/include/Poco/ValidArgs.h
    ${POCO}Foundation/include/Poco/Void.h
    ${POCO}Foundation/include/Poco/Windows1252Encoding.h
    ${POCO}Foundation/include/Poco/WindowsConsoleChannel.h
    ${POCO}Foundation/include/Poco/zconf.h
    ${POCO}Foundation/include/Poco/zlib.h
    ${POCO}Foundation/include/pocomsg.h
    PARENT_SCOPE)

source_group(PocoFoundation FILES ${POCO_FOUNDATION_HEADERS})
source_group(TestSuite FILES ${TESTSUITE_SOURCES})

add_executable(${EXECUTABLE} ${POCO_FOUNDATION_HEADERS} ${TESTSUITE_SOURCES})
set_target_properties(${EXECUTABLE} PROPERTIES COMPILE_FLAGS ${FINAL_COMPILE_FLAGS})

set(LIBS Tetris PocoFoundation CppUnit boost_thread)
if (UNIX)
set(LIBS ${LIBS} pthread)
endif()

target_link_libraries(${EXECUTABLE} ${LIBS})

